Web: fix broken layout after text edit

--- a/webskins/_default_/pub/_default_.css
+++ b/webskins/_default_/pub/_default_.css
@@ -295,7 +295,6 @@ tr.evenrow td {
 
 .subsection {
 	clear: both;
-	margin: 0;
 }
 
 .subsection div {
@@ -316,11 +315,13 @@ tr.evenrow td {
 
 .subsection div.checkbox {
 	padding: 9px 0 0 3px;
-	max-width: 537px;
+	width: 537px;
 }
 
-.subsection div.checkbox input {
-	min-width: 0;
+.subsection div.checkbox label {
+	vertical-align: top;
+	display: inline-block;
+	width:520px;
 }
 
 .section .info {
